--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/passport": "^11.2",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "mikehaertl/phpwkhtmltopdf": "^2.5",
         "symfony/http-client": "^6.1",
         "symfony/mailgun-mailer": "^6.1",
         "yajra/laravel-datatables": "^9.0",
